-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Query Integration
-
Minor Change
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
While working on SERVER-91278, I am finding that these pipelines do not return an error, but I think they should, since "searchScore" is not defined:
coll.aggregate([\{$set: {score: {$meta: "searchScore"}}}]); coll.aggregate([\{$sort: {score: {$meta: "searchScore"}}}]);
coll.aggregate([\{$set: {score: {$meta: "vectorSearchScore"}}}]); coll.aggregate([\{$sort: {score: {$meta: "vectorSearchScore"}}}]);
This task/work is related to SERVER-69872, but I think it's different/supporting.
- is related to
-
SERVER-69872 Send necessary information to decide whether (vector?)searchScore is needed to mongot
-
- Open
-
- related to
-
SERVER-108870 [v8.2] "searchScore"/"vectorSearchScore" warning log should only be logged when invalid usage
-
- Closed
-
-
SERVER-94668 POC 'scoreDetails' for $score
-
- Closed
-
-
SERVER-99169 score cannot be used when not defined
-
- Closed
-
-
SERVER-108468 [v8.2] Add warning log for using "searchScore" or "vectorSearchScore" when undefined
-
- Closed
-
-
SERVER-108546 Restore error code when using "searchScore" or "vectorSearchScore" when undefined
-
- Closed
-
-
SERVER-40900 Agg pipeline static analysis does not always fail $meta when metadata is unavailable
-
- Backlog
-
-
SERVER-97103 Allow sorting by {$meta: "score"}
-
- Closed
-
-
SERVER-97104 Restrict {$meta: "scoreDetails"} to featureFlagRankFusionFull and apiStrict=false
-
- Closed
-
-
SERVER-97102 Stress test dependency tracking for {$meta: "scoreDetails"} for pipelines spanning across sharded network split
-
- Closed
-