SERVER-93521 Validate searchScore and vectorSearchScore meta fields (#32961)

GitOrigin-RevId: 929b99fef73773b5aff5efd8e265c07d8b5d4712