jstests/with_mongot/e2e/metadata/search_score_meta_validation.js
@@ -10,6 +10,8 @@ import {
     makeMovieVectorQuery
 } from "jstests/with_mongot/e2e_lib/data/movies.js";
 
+const kUnavailableMetadataErrCode = 40218;
+
 const coll = db.search_score_meta_validation;
 coll.drop();
 
@@ -17,30 +19,30 @@ assert.commandWorked(coll.insertMany(getMovieData()));
 createSearchIndex(coll, getMovieVectorSearchIndexSpec());
 
 function testInvalidDereference(metaType) {
-    // TODO SERVER-93521 Should not be able to use 'searchScore' without a $search pipeline. These
-    // pipelines should one day return an error, since the behavior is essentially undefined.
-    assert.doesNotThrow(() => coll.aggregate([
+    assert.throwsWithCode(() => coll.aggregate([
         {$setWindowFields: {sortBy: {score: {$meta: metaType}}, output: {rank: {$rank: {}}}}},
-    ]));
-    assert.doesNotThrow(() => coll.aggregate([{$sort: {score: {$meta: metaType}}}]));
-    assert.doesNotThrow(() => coll.aggregate([{$set: {score: {$meta: metaType}}}]));
+    ]),
+                          kUnavailableMetadataErrCode);
+    assert.throwsWithCode(() => coll.aggregate([{$sort: {score: {$meta: metaType}}}]),
+                          kUnavailableMetadataErrCode);
+    assert.throwsWithCode(() => coll.aggregate([{$set: {score: {$meta: metaType}}}]),
+                          kUnavailableMetadataErrCode);
 }
 
 testInvalidDereference("searchScore");
 testInvalidDereference("vectorSearchScore");
 
-// TODO SERVER-93521 This one should error since half of the documents don't have a
-// vectorSearchScore.
-// assert.doesNotThrow(() => coll.aggregate([
-//     {
-//         $unionWith: {
-//             coll: coll.getName(),
-//             pipeline: [makeMovieVectorQuery({
-//                 queryVector: getMoviePlotEmbeddingById(8),
-//                 limit: 10,
-//             })]
-//         }
-//     },
-//     {$sort: {score: {$meta: "vectorSearchScore"}}}
-// ]));
+assert.throwsWithCode(() => coll.aggregate([
+    {
+        $unionWith: {
+            coll: coll.getName(),
+            pipeline: [makeMovieVectorQuery({
+                queryVector: getMoviePlotEmbeddingById(8),
+                limit: 10,
+            })]
+        }
+    },
+    {$sort: {score: {$meta: "vectorSearchScore"}}}
+]),
+                      kUnavailableMetadataErrCode);
 dropSearchIndex(coll, {name: getMovieVectorSearchIndexSpec().name});
