src/mongo/db/pipeline/dependencies_test.cpp
@@ -122,6 +122,8 @@ TEST(DependenciesNeedsMetadataTest, OnlyChosenMetadataFieldsShouldThrowIfUnavail
         DocumentMetadataFields::MetaType::kGeoNearDist,
         DocumentMetadataFields::MetaType::kGeoNearPoint,
         DocumentMetadataFields::MetaType::kScore,
+        DocumentMetadataFields::MetaType::kSearchScore,
+        DocumentMetadataFields::MetaType::kVectorSearchScore,
         DocumentMetadataFields::MetaType::kScoreDetails,
     };
 
